--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nhentai-api-js",
-  "version": "1.1.2",
-  "description": "API for nHentai",
+  "version": "1.1.3",
+  "description": "Unofficial API for nHentai",
   "main": "index.js",
   "scripts": {
     "test": "node test/index.js"
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/Tsuk1ko/nhentai-api-js",
   "dependencies": {
-    "axios": "^0.18.0",
-    "cheerio": "^1.0.0-rc.2",
-    "qs": "^6.6.0"
+    "axios": "^0.19.2",
+    "cheerio": "^0.22.0",
+    "qs": "^6.9.4"
   }
 }
