--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nhentai-api-js",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Unofficial API for nHentai",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/Tsuk1ko/nhentai-api-js",
   "dependencies": {
     "axios": "^0.19.2",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.3",
     "qs": "^6.9.4"
   }
 }
